# react-native-sound

./: index.d.ts  index.ts  package-lock.json  package.json  react-native-sound-0.11.2-1.0.0.tgz  sound.js
MyTest/: oh-package.json5
MyTest/entry/src/main/cpp/: CMakeLists.txt
android/: build.gradle  local.properties
harmony/: sound.har
harmony/sound/: BuildProfile.ets  build-profile.json5  hvigorfile.ts  index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/sound/src/main/: module.json5
harmony/sound/src/main/cpp/: CMakeLists.txt  SoundPackage.h  SoundTurboModule.cpp  SoundTurboModule.h
harmony/sound/src/main/ets/: AVPlayerController.ets  AVPlayerController.ts  Logger.ts  SoundPackage.ts  SoundTurboModule.ts  index.ets  ts.ts
lib/commonjs/: NativeSound.js  NativeSound.js.map  index.js  index.js.map
lib/module/: NativeSound.js  NativeSound.js.map  index.js  index.js.map
src/: NativeSound.ts  index.ts
